CTRL+Z applies only to the latest action in tables
Categories
(Core :: DOM: Editor, defect, P2)
Tracking
()
People
(Reporter: matteo.sindona, Assigned: m_kato)
References
(Regression)
Details
(Keywords: parity-chrome, regression)
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:79.0) Gecko/20100101 Firefox/79.0
Steps to reproduce:
-
login https://results.totallympics.com/
Username: test
Password: test -
Go here: https://results.totallympics.com/forum.php?mod=post&action=edit&fid=100&tid=2908&pid=43939&page=1
-
You will find a table inside an editor. Add or remove some text from one of the cells
-
Click CTRL+Z on your keyboard to revert the last action. It works and the latest action is reverted, but:
-
try to add and/or remove text from two different cells (or even inside the same cell but in two different parts of it)
-
click on CTRL+Z two times. The second time you click on CTRL+Z nothing will happen. Only the latest action is reverted, but previous actions can not be undone.
-
This is happening ONLY inside the table. If you try to edit the "Test 1, Test 2, Test 3" part before the table, you will not face the problem and you can click CTRL+Z how many times you want, all the actions will reverted.
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Comment 1•5 years ago
|
||
I made a video to show the difference in the behaviour of the CTRL+Z function with text inside the table (first part of the video) and outside the table (second part of the video): https://youtu.be/4EH9VS-fufE
Also, I am facing this problem since a couple of years, maybe three. But I am sure in some previous Mozilla version this was not happening. And if you need to know exactly from which version this problem started, I can try and find out by installing previous versions and try it.
Thank you!
Comment 2•5 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=4153ce5276d5f44c77a928836453343d89a78b5d&tochange=efbc0c055fbc1511c181eadb728e135d9b7976eb
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
test case
| Assignee | ||
Comment 5•5 years ago
|
||
Ah, why do we use style transaction for editing UI?
| Assignee | ||
Comment 6•5 years ago
|
||
Although we use CSS property for Inline table editing UI, we use edit
transaction for it unfortunately. When hiding this UI, since removing
element doesn't use edit transaction, transaction will be canceled before
showing this UI.
It is unnecessary to use edit transaction for UI, so we shouldn't use it.
| Reporter | ||
Comment 7•5 years ago
|
||
Hello Makoto, thank you for your answer !
Is there any chance this can be fixed in a future Mozilla release ? Thank you!
Updated•5 years ago
|
| Assignee | ||
Comment 9•5 years ago
|
||
(In reply to matteo.sindona from comment #7)
Hello Makoto, thank you for your answer !
Is there any chance this can be fixed in a future Mozilla release ? Thank you!
This will be fixed by Firefox 82. 81 is too late to fix this.
Comment 10•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Description
•